force-app/main/default/objects/ServiceCost__c/ServiceCost__c.object-meta.xml
<CustomObject>
    <label>Coste de Servicio</label>
    <nameField>
        <displayFormat>SC {000000}</displayFormat>
        <label>Nombre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Costes de Servicio</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>