force-app/main/default/objects/ServiceCost__c/fields/DomesticCost__c.field-meta.xml
<CustomField>
    <fullName>DomesticCost__c</fullName>
    <label>Coste Domésticos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>