force-app/main/default/objects/ServiceCost__c/fields/ProfessionalCost__c.field-meta.xml
<CustomField>
    <fullName>ProfessionalCost__c</fullName>
    <label>Coste Profesionales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>