force-app/main/default/objects/ServiceCost__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Servicio</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Costes</relationshipLabel>
    <relationshipName>ServiceCosts</relationshipName>
    <type>Lookup</type>
</CustomField>