force-app/main/default/objects/ServiceCost__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DomesticCost__c</columns>
    <columns>ProfessionalCost__c</columns>
    <columns>County__c</columns>
    <columns>Service__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>